2023-01-03
-	Implement source IP address spoofing for the packet repeater. See #248
    The source spoofing is enabled with new option -A.

2023-01-02
-	Replace old packet repeater code with more modern privsep code

2023-01-01
-	Remove old code

2022-12-31
-	Replace old launcher startup code with more modern privsep code

2022-12-29
-	Fix compile issue #395 on Alpine Linux

2022-12-24
-	V1.7.1

2022-12-23
-	Fix #394. Event labeling.

2022-12-22
- 	Fix #393 consistent logging

2022-12-20
-	Remove extra ':' in getopt of nfcapd.

2022-12-18 
-	Add feature #391. Add country code addgregation
-	Fix #392. Fix format options with IPv6
-	Fix #390. Aggregation not working for GeoDB's enriched AS data

2022-12-17
-	Add OpenBSD pflog decoding in nfpcapd and nfdump
-	Add pfinfo extension
-	Fix Ident change
-	Sync nfcapd, sfcapd code. Cleanup pcaproc
-	Fix #389 receiving IPv4 on IPv6 socket in sfcapd
-	Code cleanup in nfpcapd

2022-12-09
-	Code cleanup
-	Fix #385 bug - i386 32bit alignment

2022-12-9
-	Fix #384 bug when compile with --enable-nsel
-	Fix #385 bug - i386 32bit alignment 

2022-12-02
-	Implement NFLOG link layer.
-	Fix #381. pcap overwrite fixed.
-	Fix #380. string validation
-	Fix #377. Rework sampling code in general. Switch to packet interval/space notation.  Map older sampling to new notation.

Fix #375 relative timestamps with sysUptime id 160

2022-10-23
-	Rework nbar code. Use new array records and fix nbar bug in older versions.

2022-10-22
-	Fix #370. Help shows correct option -A
-	Fix #369. Legacy -M for NfSen works again

2022-10-07
-	Improve nbar handling. Add private enterprise number decoding

2022-10-03
-	Merge pull request #357

2022-09-30
-	nfdump-1.7.0.1 - fix build issues
-	Add docker file for alpine Linux
-	Update docker file for ubuntu
-	Fix build issues on various Linuxes

2022-09-28
-	nfdump-1.7.0 - unicorn released